--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,153 @@
-* {
-    margin: 0px;
-    padding: 0px;
-}
+ @font-face {
+     font-family: Proxima;
+     src: url(fonts/ProximaNovaRegular.otf);
+ }
+ 
+ * {
+     margin: 0px;
+     padding: 0px;
+ }
+ 
+ @media screen and (max-width: 768px) {
+     #container_header-order__phone-number a {
+         font-size: 16px;
+     }
+ }
+ 
+ @media screen and (max-width: 600px) {
+     .container_header {
+         position: relative;
+         min-height: 40px;
+     }
+     #container_header-nav ul {
+         width: 180px;
+         padding: 5px 0;
+         position: absolute;
+         top: 0;
+         left: 0;
+         border: solid 1px #aaa;
+         border-radius: 5px;
+         box-shadow: 0 1px 2px rgba(0, 0, 0, .3);
+     }
+     #container_header-nav li {
+         display: none;
+         /* скрыть все <li> пункты */
+         margin: 0;
+     }
+     #container_header-nav a {
+         display: block;
+         padding: 5px 5px 5px 32px;
+         text-align: left;
+     }
+     /* при наведении на пункты меню */
+     #container_header-nav ul li {
+         display: block;
+         margin: 0 0 5px;
+     }
+     /* адаптивное меню справа */
+     .nav.right ul {
+         left: auto;
+         right: 0;
+     }
+     .container_header-order {
+         display: none;
+     }
+ }
+ 
+ .container_header {
+     display: flex;
+     flex-direction: row;
+     flex-wrap: nowrap;
+     justify-content: center;
+     align-content: center;
+     align-items: flex-start;
+     position: fixed;
+     width: 100%;
+     margin-top: 4vh;
+     font-family: Proxima;
+ }
+ 
+ #container_header-logo:nth-child(1) {
+     order: 0;
+     flex: 0 1 auto;
+     align-self: auto;
+ }
+ 
+ #container_header-nav:nth-child(2) {
+     margin-top: 1em;
+     color: #ffffff;
+     font-size: 18px;
+     text-align: right;
+ }
+ 
+ #container_header-nav ul {
+     margin: 0;
+     padding: 0;
+     list-style: none
+ }
+ 
+ #container_header-nav li {
+     margin: 0 5px 10px 0;
+     padding: 0;
+     list-style: none;
+     display: inline-block;
+     padding-left: 2vh;
+ }
+ 
+ #container_header-nav li a {
+     padding: 3px 12px;
+     text-decoration: none;
+     line-height: 100%;
+     text-decoration: none;
+     color: #ffffff;
+ }
+ 
+ #container_header-nav li a:hover {
+     border: 1px solid;
+     border-color: #2d83ff;
+ }
+ 
+ .container_header-order:nth-child(3) {
+     order: 0;
+     flex: 0 1 auto;
+     align-self: auto;
+     margin-top: 2vh;
+     margin-left: 4vh;
+ }
+ 
+ .container_slideshow {
+     margin: 0px;
+     padding: 0px;
+ }
+ 
+ #container_header-order__order-table {
+     color: #2d83ff;
+     font-size: 14px;
+     float: right;
+ }
+ 
+ #container_header-order__phone-number a {
+     color: white;
+     font-size: 28px;
+     text-decoration: none;
+ }
+ 
+ #pull {
+     display: none;
+ }
+ 
+ .prev .next {
+     cursor: pointer;
+     position: absolute;
+     top: 50%;
+     width: auto;
+     margin-top: -22px;
+     padding: 16px;
+     color: white;
+     font-weight: bold;
+     font-size: 18px;
+     transition: 0.6s ease;
+     border-radius: 0 3px 3px 0;
+ }
+ 
+ .next {}
