--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,16 @@
      src: url(fonts/ProximaNovaRegular.otf);
  }
  
+ @font-face {
+     font-family: ProximaLight;
+     src: url(fonts/ProximaNovaLight.otf);
+ }
+ 
+ @font-face {
+     font-family: ProximaBold;
+     src: url(fonts/ProximaNovaBold.otf);
+ }
+ 
  * {
      margin: 0px;
      padding: 0px;
@@ -117,6 +127,7 @@
      padding: 0px;
      position: relative;
      margin: auto;
+     margin-bottom: -51px;
  }
  
  #container_header-order__order-table {
@@ -136,7 +147,7 @@
          font-size: 16px;
      }
  }
- /*кнопка для мобильных*/
+ /*кнопка для мобильных выкл*/
  
  #pull {
      display: none;
@@ -152,8 +163,8 @@
      margin-top: -22px;
      padding: 16px;
      color: white;
-     font-weight: bold;
-     font-size: 18px;
+     font-weight: lighter;
+     font-size: 41px;
      transition: 0.6s ease;
      border-radius: 0 3px 3px 0;
  }
@@ -165,13 +176,14 @@
  
  .prev:hover,
  .next:hover {
-     background-color: rgba(0, 0, 0, 0.8);
+     background-color: #2d83ff;
  }
  
  .mySlides {
      text-align: center;
      max-height: 700px;
  }
+ /*текст на слайдере*/
  
  .text {
      color: #f2f2f2;
@@ -193,7 +205,7 @@
      transition: background-color 0.6s ease;
      float: right;
  }
- /*выровнял полосы состояния слайдов*/
+ /*выровнял полосы слайдов*/
  
  .slides-dots {
      display: flex;
@@ -227,4 +239,107 @@
      100% {
          opacity: 1;
      }
+ }
+ 
+ .container_about_chief {
+     width: 100%;
+     height: 33em;
+     background-color: #f8f8f8;
+     margin-top: -2vh;
+     justify-content: center;
+     align-items: center;
+     
+ }
+ /*добавляется при скролле страницы вниз по Y*/
+ 
+ .scroll {
+     padding-top: 5vh;
+     margin-top: 0;
+     background-color: rgba(0, 0, 0, 0.42)
+ }
+ /*TODO доделать*/
+ 
+ #container_about_chief-chief_foto {
+     order: 0;
+     flex: 0 1 auto;
+     align-self: auto;
+ }
+ 
+ #container_about_chief-chief_cite p {
+     font-family: ProximaLight;
+     font-size: 20px;
+     text-align: left;
+ }
+ 
+ #container_about_chief-chief_cite {
+     order: 0;
+     flex: 0 1 auto;
+     align-self: auto;
+     width: 50%;
+     padding-left: 10vh;
+ }
+ 
+ #container_about_chief p {
+     text-align: center;
+     font-family: proximaBold;
+     font-size: 18px;
+ }
+ 
+ #container_about_chief {}
+ 
+ .wrap {
+     display: flex;
+     flex-direction: row;
+     flex-wrap: nowrap;
+     justify-content: center;
+     align-content: stretch;
+     align-items: center;
+     padding-top: 15vh;
+ }
+ 
+ blockquote {
+     position: relative;
+     float: left;
+     font-size: 3em;
+ }
+ 
+ .button_layer {
+     text-align: center;
+     padding-top: 11vh;
+ }
+ 
+ .custom_button {
+     font-family: Proxima;
+     text-decoration: none;
+     font-size: 11pt;
+     background: none;
+     border-color: #2d83ff;
+     color: #000000;
+     display: block;
+     font-weight: normal;
+     margin: 1em auto;
+     padding: 1em 2em;
+     position: relative;
+     text-transform: uppercase;
+     cursor: pointer;
+ }
+ 
+ .custom_button,
+ .custom_button::after {
+     -webkit-transition: all 0.3s;
+     -moz-transition: all 0.3s;
+     -o-transition: all 0.3s;
+     transition: all 0.3s;
+ }
+ 
+ .custom_button:hover {
+     color: #2d83ff;
+ }
+ 
+ .custom_button:active {
+     color: #5f5f5f;
+ }
+ 
+ .custom_button a {
+     text-decoration: none;
  }
