--- a/css/main.css
+++ b/css/main.css
@@ -13,25 +13,31 @@
      src: url(fonts/ProximaNovaBold.otf);
  }
  
+ @font-face {
+     font-family: ProximaBlack;
+     src: url(fonts/ProximaNovaBlack.otf);
+ }
+ 
+ @font-face {
+     font-family: rouble;
+     src: url(fonts/rouble.otf);
+ }
+ 
  * {
      margin: 0px;
      padding: 0px;
+ }
+ 
+ body {
+     height: 100%;
+     width: 100%;
+     overflow-x: hidden;
  }
  
  @media screen and (max-width: 600px) {
      .container_header {
          position: relative;
          min-height: 40px;
-     }
-     #container_header-nav ul {
-         width: 180px;
-         padding: 5px 0;
-         position: absolute;
-         top: 0;
-         left: 0;
-         border: solid 1px #aaa;
-         border-radius: 5px;
-         box-shadow: 0 1px 2px rgba(0, 0, 0, .3);
      }
      #container_header-nav li {
          display: none;
@@ -55,6 +61,14 @@
      .container_header-order {
          display: none;
      }
+     #pull {
+         display: block;
+         background-image: url(/img/Hamburger.png)
+     }
+     .next,
+     .prev {
+         display: none;
+     }
  }
  /*шапка*/
  
@@ -62,29 +76,58 @@
      display: flex;
      flex-direction: row;
      flex-wrap: nowrap;
-     justify-content: center;
+     justify-content: space-between;
      align-content: center;
      align-items: flex-start;
      position: fixed;
-     width: 100%;
+     width: 98%;
      margin-top: 4vh;
      font-family: Proxima;
      z-index: 100000;
  }
  /*логотип*/
  
- #container_header-logo:nth-child(1) {
-     order: 0;
-     flex: 0 1 auto;
-     align-self: auto;
+ #container_header-logo {
+     margin-left: 7vh;
+ }
+ 
+ @media screen and (max-width: 990px) {
+     #container_header-logo {
+         display: none;
+     }
+ }
+ 
+ @media screen and (max-width: 590px) {
+     .menu_right-side {
+         display: none;
+     }
+     #container-contacts_number a {
+         font-size: 10vh;
+     }
+     .prev,
+     .next {
+         display: none;
+     }
+ }
+ 
+ @media screen and (max-width: 700px) {
+     .prev,
+     .next {
+         display: none;
+     }
  }
  /*навигация*/
  
- #container_header-nav:nth-child(2) {
-     margin-top: 1em;
+ #container_header-nav {
      color: #ffffff;
      font-size: 18px;
-     text-align: right;
+     margin-top: 0.5em;
+ }
+ 
+ @media screen and (max-width: 320px) {
+     #container_header-nav {
+         margin-top: 0px;
+     }
  }
  
  #container_header-nav ul {
@@ -96,7 +139,6 @@
  #container_header-nav li {
      margin: 0 5px 10px 0;
      padding: 0;
-     list-style: none;
      display: inline-block;
      padding-left: 2vh;
  }
@@ -105,7 +147,6 @@
      padding: 3px 12px;
      text-decoration: none;
      line-height: 100%;
-     text-decoration: none;
      color: #ffffff;
  }
  
@@ -115,12 +156,11 @@
  }
  /* "заказать столик"*/
  
- .container_header-order:nth-child(3) {
+ .container_header-order {
      order: 0;
      flex: 0 1 auto;
      align-self: auto;
-     margin-top: 2vh;
-     margin-left: 4vh;
+     padding-right: 4em;
  }
  
  .container_slideshow {
@@ -128,6 +168,7 @@
      position: relative;
      margin: auto;
      margin-bottom: -51px;
+     width: 100%;
  }
  
  #container_header-order__order-table {
@@ -148,10 +189,6 @@
      }
  }
  /*кнопка для мобильных выкл*/
- 
- #pull {
-     display: none;
- }
  /*стрелки на слайдере*/
  
  .prev,
@@ -166,7 +203,7 @@
      font-weight: lighter;
      font-size: 41px;
      transition: 0.6s ease;
-     border-radius: 0 3px 3px 0;
+     background-color: rgba(255, 255, 255, 0.1)
  }
  
  .next {
@@ -178,25 +215,54 @@
  .next:hover {
      background-color: #2d83ff;
  }
- 
- .mySlides {
-     text-align: center;
-     max-height: 700px;
- }
  /*текст на слайдере*/
  
  .text {
      color: #f2f2f2;
-     font-size: 22px;
+     text-align: center;
+     font-size: 60px;
      padding: 8px 12px;
      position: relative;
-     bottom: 90px;
+     width: 98%;
+     top: 40%;
+     left: 50%;
+     position: absolute;
+     transform: translate(-50%, -50%);
+     font-family: proximaBlack;
+ }
+ 
+ @media screen and (max-width: 990px) {
+     .text {
+         font-size: 40px;
+     }
+ }
+ 
+ @media screen and (max-width: 400px) {
+     .text {
+         font-size: 20px;
+     }
+ }
+ 
+ @media screen and (max-width: 400px) {
+     .text {
+         font-family: proxima;
+     }
+ }
+ 
+ @media screen and (max-width: 400px) {
+     #container-contacts_number a {
+         font-size: 7vh;
+     }
+ }
+ 
+ .text button {
+     color: white;
  }
  /*полоски слайдов*/
  
  .dot {
      cursor: pointer;
-     height: 3px;
+     height: 2px;
      width: 55px;
      margin: 0 2px;
      background-color: #0b0a0a;
@@ -214,6 +280,7 @@
      justify-content: center;
      align-content: stretch;
      align-items: flex-start;
+     padding-top: 2em;
  }
  
  .active,
@@ -248,14 +315,14 @@
      margin-top: -2vh;
      justify-content: center;
      align-items: center;
-     
  }
  /*добавляется при скролле страницы вниз по Y*/
  
  .scroll {
      padding-top: 5vh;
      margin-top: 0;
-     background-color: rgba(0, 0, 0, 0.42)
+     background-color: rgba(0, 0, 0, 0.42);
+     width: 100%;
  }
  /*TODO доделать*/
  
@@ -297,15 +364,21 @@
      padding-top: 15vh;
  }
  
- blockquote {
-     position: relative;
-     float: left;
-     font-size: 3em;
+ @media screen and (max-width: 400px) {
+     .wrap {
+         display: inline-flex;
+         flex-direction: column;
+         flex-wrap: nowrap;
+         justify-content: center;
+         align-content: stretch;
+         align-items: center;
+         padding-top: 30vh;
+     }
  }
  
  .button_layer {
      text-align: center;
-     padding-top: 11vh;
+     padding-top: 4vh;
  }
  
  .custom_button {
@@ -320,7 +393,6 @@
      margin: 1em auto;
      padding: 1em 2em;
      position: relative;
-     text-transform: uppercase;
      cursor: pointer;
  }
  
@@ -342,4 +414,231 @@
  
  .custom_button a {
      text-decoration: none;
+ }
+ 
+ .container_title {
+     font-family: ProximaBlack;
+     font-size: 80px;
+     text-align: center;
+     padding-bottom: 3vh;
+     color: #2d83ff;
+     width: 100%;
+ }
+ 
+ @media screen and (max-width: 400px) {
+     .container_title {
+         font-size: 30px;
+         padding-bottom: 1em;
+     }
+     #top-eat {
+         padding-top: 10em;
+     }
+ }
+ /*меню*/
+ /*
+поместить разные блюда в отдельные divы
+*/
+ 
+ .container-top_eat-panel__menu {
+     display: flex;
+     flex-direction: row;
+     flex-wrap: wrap;
+     justify-content: center;
+     align-content: flex-start;
+     align-items: flex-start;
+ }
+ 
+ @media screen and (max-width: 400px) {
+     .container-top_eat-panel__menu {
+         width: 25em;
+     }
+     .menu_left-side {}
+     .container-top_eat-panel {}
+ }
+ 
+ .container-top_eat-panel__menu {
+     list-style: none;
+ }
+ 
+ .menu_left-side {
+     padding-right: 2em;
+ }
+ 
+ .container-top_eat-panel__menu_content {
+     padding-bottom: 0.7em;
+ }
+ 
+ .menu-caption {
+     height: 290px;
+     color: white;
+     background-color: #2d83ff;
+     margin-bottom: 2em;
+     display: flex;
+     flex-direction: column;
+     align-content: flex-start;
+     align-items: center;
+ }
+ 
+ .menu-caption_top-caption {
+     order: 0;
+     flex: 0 1 auto;
+     align-self: auto;
+     padding-top: 2em;
+     font-family: ProximaBold;
+     font-size: 18px;
+     letter-spacing: 5px;
+     text-transform: uppercase;
+     padding-bottom: 1em;
+ }
+ 
+ @media screen and (max-width: 500px) {
+     .menu-caption_top-caption p {
+         font-size: 13px;
+     }
+     .menu-caption_middle-caption {
+         font-size: 11px;
+     }
+ }
+ 
+ .menu-caption_middle-caption {
+     order: 0;
+     flex: 0 1 auto;
+     align-self: auto;
+     font-family: proxima;
+ }
+ 
+ .pharagraph-line {
+     background-color: white;
+     height: 1px;
+     width: 2em;
+ }
+ 
+ .caption-empty-div {
+     padding-bottom: 5em;
+ }
+ 
+ .caption-price {
+     text-align: center;
+     padding-top: 1em;
+ }
+ 
+ .price {
+     padding-top: 1em;
+     font-family: ProximaBold;
+     font-size: 24px;
+ }
+ 
+ .rouble {
+     font-family: rouble;
+ }
+ 
+ .caption-wight {
+     font-size: 14px;
+     font-family: proxima;
+ }
+ 
+ .caption-weight {
+     font-family: proxima;
+     font-size: 14px;
+ }
+ 
+ .container-map {
+     padding-top: 10vh;
+     padding-bottom: 10vh;
+ }
+ 
+ #map {
+     height: 33em;
+ }
+ 
+ #container_map-title {
+     text-align: center;
+     font-family: proximaBold;
+     font-size: 30px;
+     padding-bottom: 2em;
+ }
+ 
+ .container-contacts {
+     text-align: center;
+     font-family: proxima;
+ }
+ 
+ .blue-brackets {
+     color: #2e7ef4;
+ }
+ 
+ #container-contacts_number {
+     font-size: 60px;
+ }
+ 
+ #container-contacts_number a {
+     text-decoration: none;
+     color: black
+ }
+ 
+ footer {
+     height: 10em;
+     display: flex;
+     flex-direction: row;
+     flex-wrap: wrap;
+     justify-content: space-between;
+     align-content: stretch;
+     align-items: center;
+ }
+ 
+ @media screen and (max-width: 400px) {
+     footer {
+         display: inline-flex;
+         flex-direction: column;
+         flex-wrap: nowrap;
+         justify-content: center;
+         align-content: center;
+         align-items: center;
+     }
+     .footer-link {
+         padding: 1em;
+     }
+ }
+ 
+ .footer-link {
+     font-family: proxima;
+     font-size: 14px;
+     text-decoration: none;
+     padding-right: 5em;
+     padding-left: 5em;
+ }
+ 
+ .social-icons {
+     display: flex;
+     flex-direction: row;
+     flex-wrap: nowrap;
+     justify-content: space-between;
+     align-content: stretch;
+     align-items: center;
+ }
+ 
+ #second-image {
+     padding-right: 1em;
+     padding-left: 1em;
+ }
+ 
+ #mobile_nav_icon {
+     border-bottom: 10px double #ffffff;
+     border-top: 3px solid #ffffff;
+     cursor: pointer;
+     float: left;
+     height: 4px;
+     margin-left: 5px;
+     margin-top: 5px;
+     padding-top: 4px;
+     transition: all 0.2s ease 0s;
+     width: 25px;
+     display: none;
+ }
+ 
+ @media screen and (max-width: 400px) {
+     #mobile_nav_icon {
+         visibility: visible;
+         display: block;
+     }
  }
